index index.tpl (Groovy Tempalte) impl developer mode switch to server app sources from file system

--- a/modules/cc-app/build.gradle
+++ b/modules/cc-app/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'gulp'
 
 node {
     // Enabled the automatic download. False is the default (for now).
-    download = false
+    download = true
 }
 
 sourceSets {
