--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     ext {
         springBootVersion = '1.2.1.RELEASE'
+        groovyVersion = '2.4.0'
     }
     repositories {
         mavenCentral()
