--- a/modules/cc-server/build.gradle
+++ b/modules/cc-server/build.gradle
@@ -1,3 +1,5 @@
+import org.apache.tools.ant.filters.ReplaceTokens
+
 description = 'Demo Server'
 
 apply plugin: 'war'
@@ -7,11 +9,17 @@ apply plugin: 'spring-boot'
 war {
     baseName = 'server'
     version = '1.0.0-SNAPSHOT'
+
+    processResources {
+        filter ReplaceTokens, tokens: [projectRoot: project.rootDir.path]
+    }
 }
 
 dependencies {
     compile project(":cc-app")
     compile("org.springframework.boot:spring-boot-starter-web")
+    compile "org.codehaus.groovy:groovy:${groovyVersion}"
+    compile "org.codehaus.groovy:groovy-templates:${groovyVersion}"
     providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
