--- a/modules/cc-app/package.json
+++ b/modules/cc-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "main": "app.js",
   "devDependencies": {
+    "bower": "1.3.12",
     "del": "^1.1.1",
     "gulp": "~3.8.10",
     "gulp-angular-templatecache": "^1.1.0",
@@ -13,5 +14,8 @@
     "karma": "^0.12.1",
     "karma-chrome-launcher": "^0.1.2",
     "karma-jasmine": "^0.1.5"
+  },
+  "scripts": {
+    "postinstall": "./node_modules/bower/bin/bower install"
   }
 }
